fix: component smooth scroll not work on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overscroll-behavior: none;
+  touch-action: none;
+}
+
 body {
   font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: var(--color-white);
